# DACA-HMAS-Dynamic-Adaptive-Communication-Aware-Heterogeneous-Multi-Agent-System

./: .env.example  .gitignore  Instruction.md  MANIFEST.in  README.md  README1.md  debug_trace_issues.py  instruction1.md  pyproject.toml  test_run_scenarios.py
configs/: llm.yaml  thresholds.yaml
experiments/: run_baseline_autohma.py  run_daca_hmas.py  run_full_sweep.py  run_logistics_comprehensive_30.py
experiments/configs/: baseline_inspection.yaml  baseline_logistics.yaml  full_daca_inspection.yaml
results/failed_runs/: A5_logistics_oscillatory_s1.json  FAILED_inspection_A5_oscillatory_seed1_step0_1784465101.json  FAILED_inspection_A5_oscillatory_seed1_step0_1784729760.json  FAILED_inspection_A5_oscillatory_seed1_step0_1784729768.json  FAILED_inspection_A5_oscillatory_seed1_step0_1784730295.json  FAILED_inspection_A5_oscillatory_seed1_step0_1784730303.json  FAILED_inspection_A5_oscillatory_seed1_step12_1784729820.json  FAILED_inspection_A5_oscillatory_seed1_step12_1784729828.json  FAILED_inspection_A5_oscillatory_seed1_step12_1784730355.json  FAILED_inspection_A5_oscillatory_seed1_step12_1784730363.json  FAILED_inspection_A5_oscillatory_seed1_step14_1784573265.json  FAILED_inspection_A5_oscillatory_seed1_step15_1784729835.json  (+271 more)
scratch/: generate_traces_and_plots.py  run_all_seeds.py  trace_oscillatory.py  verify_oscillatory_realism.py  verify_wireless_realism.py
src/: __init__.py  config.py  debug_trace.py
src/control/: nmpc.py  (+2 more)
tests/: conftest.py  test_acds.py  test_cqm.py  test_decomposition.py  test_feasibility.py  test_handoff.py  test_integration.py
(+34 files in other folders)
