[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daca-hmas"
version = "0.1.0"
description = "Dynamic Architecture and Coalition Adaptation for Heterogeneous Multi-Agent Systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "simple-pid>=2.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
